--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,6 +45,7 @@ commands:
     description: "publish"
     steps:
       - checkout
+      - run: ssh-add -D && echo "${GITHUB_SSH_KEY}" | base64 --decode | ssh-add -
       - restore_cache:
           keys:
           - v2-dependencies-{{ checksum "build.sbt" }}-{{ checksum "project/plugins.sbt" }}-{{ checksum ".circleci/config.yml" }}
@@ -65,13 +66,10 @@ jobs:
     steps:
       - build_and_test
         
-  publish_211:
-    executor: scala_211
-    steps:
-      - publish
-  
-  publish_212:
-    executor: scala_212
+  publish:
+    docker:
+      - image: circleci/openjdk:8-jdk
+    working_directory: ~/repo
     steps:
       - publish
 
@@ -84,17 +82,11 @@ workflows:
           context: PagerDuty
       - build_212:
           context: PagerDuty
-      - publish_211:
+      - publish:
           requires:
             - build_211
-          context: PagerDuty
-          filters:
-            branches:
-              only: master
-      - publish_212:
-          requires:
             - build_212
           context: PagerDuty
           filters:
             branches:
-              only: master
+              only: circleci-fix
