--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,7 +56,7 @@ commands:
           - v3-dependencies-
       - run:
           name: Publish
-          command: .circleci/release.sh
+          command: .circleci/release.sh $SCALA_VERSION
 
 
 jobs:
@@ -70,10 +70,13 @@ jobs:
     steps:
       - build_and_test
         
-  publish:
-    docker:
-      - image: circleci/openjdk:8-jdk
-    working_directory: ~/repo
+  publish_211:
+    executor: scala_211
+    steps:
+      - publish
+  
+  publish_212:
+    executor: scala_212
     steps:
       - publish
 
@@ -86,9 +89,15 @@ workflows:
           context: PagerDuty
       - build_212:
           context: PagerDuty
-      - publish:
+      - publish_211:
           requires:
             - build_211
+          context: PagerDuty
+          filters:
+            branches:
+              only: circleci-fix
+      - publish_212:
+          requires:
             - build_212
           context: PagerDuty
           filters:
