revert version and publish branch

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -93,4 +93,4 @@ workflows:
           context: PagerDuty
           filters:
             branches:
-              only: circleci-fix
+              only: master
